--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
   p Enter a name to check it's availability
   input(type="text", id="name")
-  
+  div.results
 
 block foot
   script(src='/js/check.js', type='text/javascript')
