--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,7 @@ html
   body
     block content
     script(src='/vendor/jquery/jquery.min.js', type='text/javascript')
+    if config.dsn
+      script(src='/vendor/raven-js/raven.min.js', type='text/javascript')
+      script(src='/ravenloader.js', type='text/javascript')
     block foot
