--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   h1= title
   p Enter a name to check it's availability
-  input(type="text", id="name")
+  form(id='checkerform', action='#')
+    input(type="text", id="name")
   div.results
 
 block foot
