--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,8 @@ block content
   p Enter a name to check it's availability
   form(id='checkerform', action='#')
     input(type="text", id="name")
+    span.throbber
+    span.status
   div.results
 
 block foot
