--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/three-quarters.css')
   body
     block content
     script(src='/vendor/jquery/jquery.min.js', type='text/javascript')
