--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/three-quarters.css')
   body
+    a(href='https://github.com/thefinn93/domain-availability', target='_blank')
+      img(src='images/ribbon.png').ribbon
     block content
     script(src='/vendor/jquery/jquery.min.js', type='text/javascript')
     script(src='/vendor/q/q.js', type='text/javascript')
