changed (improved?) instructions

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Enter a name to check it's availability
+  p Type a name and hit enter
   form(id='checkerform', action='#')
     input(type="text", id="name")
     span.throbber
