--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,5 +12,5 @@ html
     script(src='/vendor/q/q.js', type='text/javascript')
     if config.dsn
       script(src='/vendor/raven-js/raven.min.js', type='text/javascript')
-      script(src='/ravenloader.js', type='text/javascript')
+    script(src='/settings.js', type='text/javascript')
     block foot
