Added analytics. Fixes #3

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
     block content
     script(src='/vendor/jquery/jquery.min.js', type='text/javascript')
     script(src='/vendor/q/q.js', type='text/javascript')
-    if config.dsn
+    if config && config.dsn
       script(src='/vendor/raven-js/raven.min.js', type='text/javascript')
     script(src='/settings.js', type='text/javascript')
     block foot
