Warning about ratelimiting

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1= title
+  h3 Hi HN! Looks like NameCheap is ratelimiting me, so feel free to play but be aware that it'll be kinda broken
   p Type a name and hit enter
   form(id='checkerform', action='#')
     input(type="text", id="name")
